# DSAPrac

./: .gitignore  README.md  migrate-practical-questions.ps1  package-lock.json
docs/: ROADMAP.md
electron/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.mts  vite.config.ts
electron/renderer/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
electron/renderer/src/: App.tsx
electron/renderer/src/components/: DeveloperConsole.tsx  GlassCard.tsx  Heatmap.tsx  ImageLightbox.tsx  Terminal.tsx  TitleBar.tsx
electron/renderer/src/constants/: theorySections.ts
electron/renderer/src/routes/: ExamConfig.tsx  MainMenu.tsx  PracticalProblemSolver.tsx  PracticalQuestionCreator.tsx  PracticalQuestionLibrary.tsx  PracticeMode.tsx  QuestionMaker.tsx  Settings.tsx  TheoreticalQuestionCreator.tsx  TheoreticalQuestionLibrary.tsx  TheoryQuiz.tsx
electron/renderer/src/styles/: globals.css
electron/renderer/src/types/: window.d.ts
electron/src/: index.html  main.ts  preload.cjs  preload.ts  renderer.tsx
electron/static/: dist.css  exam.html  index.html  practice.html  styles.css
questions/practical/section-1/arrays/: practical-1761407227156-6be254a7.json
questions/practical/section-1/cursor-based/: practical-1761407227156-6be254a7.json
questions/practical/section-2/adt-dictionary/: practical-1761393734708-37944b64.json
rust-backend/: Cargo.toml
rust-backend/src/: compiler.rs  executor.rs  interactive.rs  judge.rs  lib.rs  main.rs  sandbox.rs  timer.rs  types.rs
(+86 files in other folders)
